Fixed position animation on tablet

--- a/src/pages/Home/Advantages/style.css
+++ b/src/pages/Home/Advantages/style.css
@@ -43,6 +43,13 @@
         padding-top: 32px;
         padding-left: 0;
       }
+
+      .anim {
+        top: 50%;
+        left: 0;
+        transform: translateY(-50%);
+        max-height: 100%;
+      }
     }
   }
 
@@ -79,13 +86,12 @@
   }
 }
 
-.img,
-.anim {
-  max-width: 100%;
+.images {
   width: 100%;
-  display: block;
   margin-left: auto;
   margin-right: auto;
+  position: relative;
+  flex-shrink: 0;
 
   @media (max-width: to-tablet) {
     max-width: 260px;
@@ -94,6 +100,13 @@
   @media (max-width: to-tablet-portrait) {
     max-width: 240px;
   }
+}
+
+.img,
+.anim {
+  max-width: 100%;
+  width: 100%;
+  display: block;
 }
 
 .anim {
